--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/nbproject/project.properties
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/nbproject/project.properties
@@ -137,106 +137,105 @@ j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.resources-codemirror-6.1.0.jar}:\
-    ${file.reference.commons-discovery-0.2.jar}:\
-    ${file.reference.geronimo-jta_1.1_spec-1.1.1.jar}:\
-    ${file.reference.itextpdf-5.4.3.jar}:\
-    ${file.reference.vtnet-vsa.jar}:\
-    ${file.reference.jaxrpc.jar}:\
-    ${file.reference.spring-core-4.2.5.RELEASE.jar}:\
-    ${file.reference.rewrite-config-prettyfaces-2.0.12.Final.jar}:\
-    ${file.reference.mchange-commons-java-0.2.3.4.jar}:\
-    ${file.reference.jackson-core-2.2.3.jar}:\
-    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
-    ${file.reference.poi-ooxml-3.14.jar}:\
+    ${file.reference.CrGnocUtil.jar}:\
+    ${file.reference.ZKFingerReader.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.axis.jar}:\
+    ${file.reference.c3p0-0.9.2.1.jar}:\
+    ${file.reference.classmate-1.3.0.jar}:\
+    ${file.reference.cloning-1.9.1.jar}:\
     ${file.reference.commons-beanutils-1.8.3.jar}:\
     ${file.reference.commons-beanutils-bean-collections-1.8.3.jar}:\
-    ${file.reference.slf4j-api-1.7.5.jar}:\
+    ${file.reference.commons-beanutils-core-1.8.3.jar}:\
+    ${file.reference.commons-codec-1.8.jar}:\
+    ${file.reference.commons-collections-3.2.jar}:\
+    ${file.reference.commons-discovery-0.2.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
+    ${file.reference.commons-fileupload-1.3.jar}:\
+    ${file.reference.commons-i18n-0.5.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-jexl-2.1.1.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.commons-logging-adapters-1.1.3.jar}:\
+    ${file.reference.commons-logging-api-1.1.3.jar}:\
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.commons-pool2-2.4.2.jar}:\
+    ${file.reference.docx4j-3.2.2.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.dozer-5.2.1.jar}:\
+    ${file.reference.el-api-2.2.jar}:\
+    ${file.reference.el-impl-2.2.jar}:\
+    ${file.reference.geronimo-jta_1.1_spec-1.1.1.jar}:\
+    ${file.reference.gson-2.6.2.jar}:\
     ${file.reference.guava-19.0.jar}:\
+    ${file.reference.hibernate-c3p0-5.1.0.Final.jar}:\
+    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
+    ${file.reference.hibernate-core-5.1.0.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.itextpdf-5.4.3.jar}:\
+    ${file.reference.jackson-core-2.2.3.jar}:\
     ${file.reference.jandex-2.0.0.Final.jar}:\
+    ${file.reference.javassist-3.20.0-GA.jar}:\
+    ${file.reference.javax.faces-2.2.8.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.wsdl_1.6.2.jar}:\
+    ${file.reference.jaxb-core-2.2.11.jar}:\
+    ${file.reference.jaxb-xmldsig-core-1.0.0.jar}:\
+    ${file.reference.jaxrpc.jar}:\
+    ${file.reference.jaxws-rt.jar}:\
+    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
+    ${file.reference.jedis-2.7.0.jar}:\
+    ${file.reference.joda-time-2.9.9.jar}:\
+    ${file.reference.jsch-0.1.53.jar}:\
+    ${file.reference.jsqlparser-0.9.5.jar}:\
+    ${file.reference.jstl-1.2.jar}:\
+    ${file.reference.jxls-2.3.0.jar}:\
+    ${file.reference.jxls-core-1.0.5.jar}:\
+    ${file.reference.jxls-jexcel-1.0.6.jar}:\
+    ${file.reference.jxls-poi-1.0.11.jar}:\
+    ${file.reference.log4j-1.2-api-2.5.jar}:\
+    ${file.reference.log4j-api-2.5.jar}:\
+    ${file.reference.log4j-core-2.5.jar}:\
+    ${file.reference.log4j-slf4j-impl-2.5.jar}:\
+    ${file.reference.mchange-commons-java-0.2.3.4.jar}:\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${file.reference.objenesis-tck-2.1.jar}:\
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.olympos-theme-1.1.1.jar}:\
+    ${file.reference.omnifaces-1.5.jar}:\
+    ${file.reference.poi-3.14.jar}:\
+    ${file.reference.poi-excelant-3.14.jar}:\
+    ${file.reference.poi-ooxml-3.14.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.14.jar}:\
+    ${file.reference.poi-scratchpad-3.14.jar}:\
+    ${file.reference.primefaces-6.1.jar}:\
+    ${file.reference.primefaces-extensions-6.1.0.jar}:\
+    ${file.reference.resources-codemirror-6.1.0.jar}:\
+    ${file.reference.rewrite-config-prettyfaces-2.0.12.Final.jar}:\
+    ${file.reference.rewrite-servlet-2.0.12.Final.jar}:\
+    ${file.reference.saaj.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.slf4j-api-1.7.5.jar}:\
+    ${file.reference.spring-aop-4.2.5.RELEASE.jar}:\
+    ${file.reference.spring-beans-4.2.5.RELEASE.jar}:\
+    ${file.reference.spring-context-4.2.5.RELEASE.jar}:\
+    ${file.reference.spring-core-4.2.5.RELEASE.jar}:\
+    ${file.reference.spring-expression-4.2.5.RELEASE.jar}:\
+    ${file.reference.spring-orm-4.2.5.RELEASE.jar}:\
+    ${file.reference.spring-test-4.2.5.RELEASE.jar}:\
+    ${file.reference.spring-tx-4.2.5.RELEASE.jar}:\
     ${file.reference.spring-web-4.2.5.RELEASE.jar}:\
     ${file.reference.spring-webmvc-4.2.5.RELEASE.jar}:\
-    ${file.reference.dozer-5.2.1.jar}:\
-    ${file.reference.el-impl-2.2.jar}:\
-    ${file.reference.jaxb-core-2.2.11.jar}:\
-    ${file.reference.log4j-api-2.5.jar}:\
-    ${file.reference.axis.jar}:\
-    ${file.reference.classmate-1.3.0.jar}:\
-    ${file.reference.activation.jar}:\
-    ${file.reference.commons-pool2-2.4.2.jar}:\
-    ${file.reference.CrGnocUtil.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.commons-exec-1.3.jar}:\
-    ${file.reference.commons-lang3-3.1.jar}:\
-    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
-    ${file.reference.poi-excelant-3.14.jar}:\
-    ${file.reference.rewrite-servlet-2.0.12.Final.jar}:\
-    ${file.reference.commons-net-3.3.jar}:\
-    ${file.reference.log4j-1.2-api-2.5.jar}:\
-    ${file.reference.servlet-api.jar}:\
-    ${file.reference.javax.faces-2.2.8.jar}:\
-    ${file.reference.poi-ooxml-schemas-3.14.jar}:\
-    ${file.reference.jstl-1.2.jar}:\
-    ${file.reference.javassist-3.20.0-GA.jar}:\
-    ${file.reference.primefaces-6.1.jar}:\
-    ${file.reference.jsqlparser-0.9.5.jar}:\
-    ${file.reference.docx4j-3.2.2.jar}:\
-    ${file.reference.jaxws-rt.jar}:\
-    ${file.reference.commons-i18n-0.5.jar}:\
-    ${file.reference.spring-aop-4.2.5.RELEASE.jar}:\
-    ${file.reference.commons-fileupload-1.3.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.jxls-poi-1.0.11.jar}:\
-    ${file.reference.saaj.jar}:\
-    ${file.reference.jaxb-xmldsig-core-1.0.0.jar}:\
-    ${file.reference.cloning-1.9.1.jar}:\
-    ${file.reference.jsch-0.1.53.jar}:\
-    ${file.reference.c3p0-0.9.2.1.jar}:\
-    ${file.reference.spring-expression-4.2.5.RELEASE.jar}:\
-    ${file.reference.commons-collections-3.2.jar}:\
-    ${file.reference.spring-tx-4.2.5.RELEASE.jar}:\
-    ${file.reference.spring-beans-4.2.5.RELEASE.jar}:\
-    ${file.reference.olympos-theme-1.1.1.jar}:\
-    ${file.reference.poi-scratchpad-3.14.jar}:\
-    ${file.reference.objenesis-tck-2.1.jar}:\
-    ${file.reference.commons-logging-1.1.3.jar}:\
-    ${file.reference.el-api-2.2.jar}:\
-    ${file.reference.zip4j_1.3.1.jar}:\
-    ${file.reference.jxls-core-1.0.5.jar}:\
-    ${file.reference.ZKFingerReader.jar}:\
-    ${file.reference.ojdbc7.jar}:\
-    ${file.reference.commons-lang-2.6.jar}:\
-    ${file.reference.commons-codec-1.8.jar}:\
-    ${file.reference.javax.wsdl_1.6.2.jar}:\
-    ${file.reference.log4j-core-2.5.jar}:\
-    ${file.reference.poi-3.14.jar}:\
-    ${file.reference.spring-test-4.2.5.RELEASE.jar}:\
-    ${file.reference.joda-time-2.9.9.jar}:\
-    ${file.reference.jxls-2.3.0.jar}:\
-    ${file.reference.gson-2.6.2.jar}:\
-    ${file.reference.xmlbeans-xmlpublic-2.6.0.jar}:\
-    ${file.reference.commons-jexl-2.1.1.jar}:\
-    ${file.reference.commons-logging-api-1.1.3.jar}:\
-    ${file.reference.hibernate-core-5.1.0.Final.jar}:\
-    ${file.reference.primefaces-extensions-6.1.0.jar}:\
-    ${file.reference.spring-context-4.2.5.RELEASE.jar}:\
-    ${file.reference.antlr-2.7.7.jar}:\
-    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
-    ${file.reference.commons-logging-adapters-1.1.3.jar}:\
-    ${file.reference.hibernate-c3p0-5.1.0.Final.jar}:\
-    ${file.reference.spring-orm-4.2.5.RELEASE.jar}:\
-    ${file.reference.log4j-slf4j-impl-2.5.jar}:\
-    ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.jedis-2.7.0.jar}:\
-    ${file.reference.commons-beanutils-core-1.8.3.jar}:\
-    ${file.reference.omnifaces-1.5.jar}:\
-    ${file.reference.jxls-jexcel-1.0.6.jar}:\
+    ${file.reference.vtnet-vsa.jar}:\
     ${file.reference.wsdl4j-1.5.1.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.xmlbeans-xmlpublic-2.6.0.jar}:\
+    ${file.reference.zip4j_1.3.1.jar}:\
     ${file.reference.jersey-client-1.17.1.jar}:\
-    ${file.reference.jersey-core-1.17.1.jar}:\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${file.reference.jersey-core-1.17.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
