--- a/WEB_MOTEL/src/config.properties
+++ b/WEB_MOTEL/src/config.properties
@@ -1,23 +1,5 @@
-#redis
-#redis_sentinel_host = 10.60.97.14:9378,10.60.97.15:9378,10.60.97.16:9378,10.60.97.17:9378
-redis_sentinel_host = 10.60.129.109:8378,10.60.129.110:8378,10.60.129.111:8378,10.60.129.112:8378
-redis_master_name = 1MU1+vWJQXiZy4URDv1VEg==
-redis_master_pass = RP4omjBQIVu0JexYxUs9OQ==
-redisPoolTotal=300
-
-
-startLunchTime=11:30
-endLunchTime=12:30
-startWorkTime=07:30
-endWorkTime=16:30
-bonus.type.chuyencan=Th\u01b0\u1edfng chuy\u00ean c\u1ea7n
-bonus.type.xangxe=H\u1ed7 tr\u1ee3 x\u0103ng xe
-bonus.type.otherOld=H\u1ed7 tr\u1ee3 kh\u00e1c (C\u0169)
-bonus.type.other1=H\u1ed7 tr\u1ee3 kh\u00e1c (M\u1edbi) 1
-bonus.type.other2=H\u1ed7 tr\u1ee3 kh\u00e1c (M\u1edbi) 2
-
 #cho phep vao full chuc nang hay khong 1:vao tat ca url, 0: chi vao theo phan quyen
-IS_TEST=1
+IS_TEST=0
 #cau hinh web dung 1:local phong tap(call truc tiep toi ws c#) hay 0:server tap trung
 IS_LOCAL=1
 LINK_SERVER_SERVICES=http://192.168.1.3:2405/GymRestfulService.svc
@@ -25,3 +7,6 @@ IP_SOURCE_FINGERPRINT=192.168.1.201
 #time out ket noi toi ws ms
 TIME_OUT=2000
 PRICE_TRANSFER=500000
+
+
+DEFAULT_URL=/bill
