--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/nbproject/private/private.properties
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\VietNV\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.home=G:/set up/java/IDE/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=G:\\set up\\java\\IDE\\Apache Software Foundation\\Apache Tomcat 8.0.27
+deploy.ant.properties.file=C:\\Users\\VietNV\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+j2ee.server.home=D:/Tool web/apache-tomcat-9.0.0.M21
+j2ee.server.instance=tomcat90:home=D:\\Tool web\\apache-tomcat-9.0.0.M21
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
