--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/src/config.properties
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/src/config.properties
@@ -10,3 +10,5 @@ PRICE_TRANSFER=500000
 
 
 DEFAULT_URL=/bill
+#cong them ngay nhap dien nuoc de xac dinh thang tinh tien phong
+NEXT_DAY_TO_MOTNH=10
