--- a/WEB_MOTEL/src/config.properties
+++ b/WEB_MOTEL/src/config.properties
@@ -12,3 +12,5 @@ PRICE_TRANSFER=500000
 DEFAULT_URL=/bill
 #cong them ngay nhap dien nuoc de xac dinh thang tinh tien phong
 NEXT_DAY_TO_MOTNH=10
+#so phong free mac dinh
+MAX_NUMBER_ROOM_DEFAULT=10
