--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/nbproject/private/private.properties
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\VietNV\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.home=G:/set up/java/IDE/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=G:\\set up\\java\\IDE\\Apache Software Foundation\\Apache Tomcat 8.0.27
+deploy.ant.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/User/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+j2ee.server.home=H:/WORK/Program/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.instance=tomcat80:home=H:\\WORK\\Program\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\VietNV\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
